--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,4 +5,6 @@ $Grayish-blue: hsl(233, 8%, 79%);
 $Dark-grayish-blue: hsl(236, 13%, 42%);
 $Very-dark-blue: hsl(240, 100%, 5%);
 
-$size-screen: 960px;
+$size-screen: 970px;
+$size-screen-2: 880px;
+$size-screen-3: 730px;
