--- a/src/styles/cards/cardStyles.css
+++ b/src/styles/cards/cardStyles.css
@@ -26,9 +26,14 @@
 .card h4:hover {
   color: hsl(5, 85%, 63%);
 }
-@media (max-width: 960px) {
+@media (max-width: 970px) {
   .card {
     width: 350px;
     padding-bottom: 15px;
+  }
+}
+@media (max-width: 880px) {
+  .card {
+    width: 100%;
   }
 }/*# sourceMappingURL=cardStyles.css.map */
