--- a/src/styles/main/mainSectionStyles.scss
+++ b/src/styles/main/mainSectionStyles.scss
@@ -17,6 +17,11 @@
             width: 100%;
         }
 
+        #web-3-mobile{
+            width: 100%;
+            display: none;
+        }
+
         #bottom-section{
             display: grid;
             grid-template-columns: 40% 60%;
@@ -121,11 +126,39 @@
             width: 100%;
             align-items: flex-start;
             justify-content: center;
-            padding: 30px 0px 30px 0px;
+            padding: 30px 0px 40px 0px;
 
             .new-articles{
                 width: 100%;
-                height: 320px;
+                height: fit-content;
+            }
+        }
+    }
+
+    @media (max-width: v.$size-screen-3) {
+        #left-section{
+
+            #web-3-desktop{
+                display: none;
+            }
+    
+            #web-3-mobile{
+                display: block;
+            }
+
+            #bottom-section{
+                #bottom-title{
+                    padding: 0;
+                    h1{
+                        line-height: 1;
+                        font-size: 34px;
+                    }  
+                }
+
+                #bottom-description{
+                    position: relative;
+                    top: -25px;
+                }
             }
         }
     }
