--- a/src/styles/cards/cardStyles.scss
+++ b/src/styles/cards/cardStyles.scss
@@ -12,7 +12,7 @@
         padding-right: 10px;
     }
 
-    #info{
+    .info{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
