--- a/src/styles/cards/cardStyles.css
+++ b/src/styles/cards/cardStyles.css
@@ -9,7 +9,7 @@
   height: 100%;
   padding-right: 10px;
 }
-.card #info {
+.card .info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
